Propagate `JavaModuleFlagsProvider` through `JavaInfo`
PiperOrigin-RevId: 454184811
Change-Id: I845ecaed98d87c3e01fac64b697a1046447b199a